// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`returning.sql > line 9 1`] = `
[
  "INSERT INTO foo (f2,f3)
  VALUES ('test', DEFAULT), ('More', 11), (upper('more'), 7+9)
  RETURNING *, f1+f3 AS sum",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "cols": [
              {
                "ResTarget": {
                  "location": 17,
                  "name": "f2",
                },
              },
              {
                "ResTarget": {
                  "location": 20,
                  "name": "f3",
                },
              },
            ],
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "foo",
              "relpersistence": "p",
            },
            "returningList": [
              {
                "ResTarget": {
                  "location": 99,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 99,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 102,
                  "name": "sum",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "f1",
                              },
                            },
                          ],
                          "location": 102,
                        },
                      },
                      "location": 104,
                      "name": [
                        {
                          "String": {
                            "sval": "+",
                          },
                        },
                      ],
                      "rexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "f3",
                              },
                            },
                          ],
                          "location": 105,
                        },
                      },
                    },
                  },
                },
              },
            ],
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 34,
                            "sval": {
                              "sval": "test",
                            },
                          },
                        },
                        {
                          "SetToDefault": {
                            "location": 42,
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 53,
                            "sval": {
                              "sval": "More",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 11,
                            },
                            "location": 61,
                          },
                        },
                      ],
                    },
                  },
                  {
                    "List": {
                      "items": [
                        {
                          "FuncCall": {
                            "args": [
                              {
                                "A_Const": {
                                  "location": 73,
                                  "sval": {
                                    "sval": "more",
                                  },
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "upper",
                                },
                              },
                            ],
                            "location": 67,
                          },
                        },
                        {
                          "A_Expr": {
                            "kind": "AEXPR_OP",
                            "lexpr": {
                              "A_Const": {
                                "ival": {
                                  "ival": 7,
                                },
                                "location": 82,
                              },
                            },
                            "location": 83,
                            "name": [
                              {
                                "String": {
                                  "sval": "+",
                                },
                              },
                            ],
                            "rexpr": {
                              "A_Const": {
                                "ival": {
                                  "ival": 9,
                                },
                                "location": 84,
                              },
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`returning.sql > line 13 1`] = `
[
  "SELECT * FROM foo",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "foo",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`returning.sql > line 15 1`] = `
[
  "UPDATE foo SET f2 = lower(f2), f3 = DEFAULT RETURNING foo.*, f1+f3 AS sum13",
  {
    "stmts": [
      {
        "stmt": {
          "UpdateStmt": {
            "relation": {
              "inh": true,
              "location": 7,
              "relname": "foo",
              "relpersistence": "p",
            },
            "returningList": [
              {
                "ResTarget": {
                  "location": 54,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "foo",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 54,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 61,
                  "name": "sum13",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "f1",
                              },
                            },
                          ],
                          "location": 61,
                        },
                      },
                      "location": 63,
                      "name": [
                        {
                          "String": {
                            "sval": "+",
                          },
                        },
                      ],
                      "rexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "f3",
                              },
                            },
                          ],
                          "location": 64,
                        },
                      },
                    },
                  },
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 15,
                  "name": "f2",
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "f2",
                                },
                              },
                            ],
                            "location": 26,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "lower",
                          },
                        },
                      ],
                      "location": 20,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 31,
                  "name": "f3",
                  "val": {
                    "SetToDefault": {
                      "location": 36,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`returning.sql > line 19 1`] = `
[
  "DELETE FROM foo WHERE f1 > 2 RETURNING f3, f2, f1, least(f1,f3)",
  {
    "stmts": [
      {
        "stmt": {
          "DeleteStmt": {
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "foo",
              "relpersistence": "p",
            },
            "returningList": [
              {
                "ResTarget": {
                  "location": 39,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "f3",
                          },
                        },
                      ],
                      "location": 39,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 43,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "f2",
                          },
                        },
                      ],
                      "location": 43,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 47,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "f1",
                          },
                        },
                      ],
                      "location": 47,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 51,
                  "val": {
                    "MinMaxExpr": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "f1",
                                },
                              },
                            ],
                            "location": 57,
                          },
                        },
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "f3",
                                },
                              },
                            ],
                            "location": 60,
                          },
                        },
                      ],
                      "location": 51,
                      "op": "IS_LEAST",
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 22,
                  },
                },
                "location": 25,
                "name": [
                  {
                    "String": {
                      "sval": ">",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 2,
                    },
                    "location": 27,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`returning.sql > line 29 1`] = `
[
  "UPDATE foo SET f3 = f3 * 2
  WHERE f1 > 10
  RETURNING *, f1+112 IN (SELECT q1 FROM int8_tbl) AS subplan,
    EXISTS(SELECT * FROM int4_tbl) AS initplan",
  {
    "stmts": [
      {
        "stmt": {
          "UpdateStmt": {
            "relation": {
              "inh": true,
              "location": 7,
              "relname": "foo",
              "relpersistence": "p",
            },
            "returningList": [
              {
                "ResTarget": {
                  "location": 55,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 55,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 58,
                  "name": "subplan",
                  "val": {
                    "SubLink": {
                      "location": 65,
                      "subLinkType": "ANY_SUBLINK",
                      "subselect": {
                        "SelectStmt": {
                          "fromClause": [
                            {
                              "RangeVar": {
                                "inh": true,
                                "location": 84,
                                "relname": "int8_tbl",
                                "relpersistence": "p",
                              },
                            },
                          ],
                          "limitOption": "LIMIT_OPTION_DEFAULT",
                          "op": "SETOP_NONE",
                          "targetList": [
                            {
                              "ResTarget": {
                                "location": 76,
                                "val": {
                                  "ColumnRef": {
                                    "fields": [
                                      {
                                        "String": {
                                          "sval": "q1",
                                        },
                                      },
                                    ],
                                    "location": 76,
                                  },
                                },
                              },
                            },
                          ],
                        },
                      },
                      "testexpr": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "f1",
                                  },
                                },
                              ],
                              "location": 58,
                            },
                          },
                          "location": 60,
                          "name": [
                            {
                              "String": {
                                "sval": "+",
                              },
                            },
                          ],
                          "rexpr": {
                            "A_Const": {
                              "ival": {
                                "ival": 112,
                              },
                              "location": 61,
                            },
                          },
                        },
                      },
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 110,
                  "name": "initplan",
                  "val": {
                    "SubLink": {
                      "location": 110,
                      "subLinkType": "EXISTS_SUBLINK",
                      "subselect": {
                        "SelectStmt": {
                          "fromClause": [
                            {
                              "RangeVar": {
                                "inh": true,
                                "location": 131,
                                "relname": "int4_tbl",
                                "relpersistence": "p",
                              },
                            },
                          ],
                          "limitOption": "LIMIT_OPTION_DEFAULT",
                          "op": "SETOP_NONE",
                          "targetList": [
                            {
                              "ResTarget": {
                                "location": 124,
                                "val": {
                                  "ColumnRef": {
                                    "fields": [
                                      {
                                        "A_Star": {},
                                      },
                                    ],
                                    "location": 124,
                                  },
                                },
                              },
                            },
                          ],
                        },
                      },
                    },
                  },
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 15,
                  "name": "f3",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "f3",
                              },
                            },
                          ],
                          "location": 20,
                        },
                      },
                      "location": 23,
                      "name": [
                        {
                          "String": {
                            "sval": "*",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 25,
                        },
                      },
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 35,
                  },
                },
                "location": 38,
                "name": [
                  {
                    "String": {
                      "sval": ">",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 10,
                    },
                    "location": 40,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`returning.sql > line 34 1`] = `
[
  "DELETE FROM foo
  WHERE f1 > 10
  RETURNING *, f1+112 IN (SELECT q1 FROM int8_tbl) AS subplan,
    EXISTS(SELECT * FROM int4_tbl) AS initplan",
  {
    "stmts": [
      {
        "stmt": {
          "DeleteStmt": {
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "foo",
              "relpersistence": "p",
            },
            "returningList": [
              {
                "ResTarget": {
                  "location": 44,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 44,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 47,
                  "name": "subplan",
                  "val": {
                    "SubLink": {
                      "location": 54,
                      "subLinkType": "ANY_SUBLINK",
                      "subselect": {
                        "SelectStmt": {
                          "fromClause": [
                            {
                              "RangeVar": {
                                "inh": true,
                                "location": 73,
                                "relname": "int8_tbl",
                                "relpersistence": "p",
                              },
                            },
                          ],
                          "limitOption": "LIMIT_OPTION_DEFAULT",
                          "op": "SETOP_NONE",
                          "targetList": [
                            {
                              "ResTarget": {
                                "location": 65,
                                "val": {
                                  "ColumnRef": {
                                    "fields": [
                                      {
                                        "String": {
                                          "sval": "q1",
                                        },
                                      },
                                    ],
                                    "location": 65,
                                  },
                                },
                              },
                            },
                          ],
                        },
                      },
                      "testexpr": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "f1",
                                  },
                                },
                              ],
                              "location": 47,
                            },
                          },
                          "location": 49,
                          "name": [
                            {
                              "String": {
                                "sval": "+",
                              },
                            },
                          ],
                          "rexpr": {
                            "A_Const": {
                              "ival": {
                                "ival": 112,
                              },
                              "location": 50,
                            },
                          },
                        },
                      },
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 99,
                  "name": "initplan",
                  "val": {
                    "SubLink": {
                      "location": 99,
                      "subLinkType": "EXISTS_SUBLINK",
                      "subselect": {
                        "SelectStmt": {
                          "fromClause": [
                            {
                              "RangeVar": {
                                "inh": true,
                                "location": 120,
                                "relname": "int4_tbl",
                                "relpersistence": "p",
                              },
                            },
                          ],
                          "limitOption": "LIMIT_OPTION_DEFAULT",
                          "op": "SETOP_NONE",
                          "targetList": [
                            {
                              "ResTarget": {
                                "location": 113,
                                "val": {
                                  "ColumnRef": {
                                    "fields": [
                                      {
                                        "A_Star": {},
                                      },
                                    ],
                                    "location": 113,
                                  },
                                },
                              },
                            },
                          ],
                        },
                      },
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 24,
                  },
                },
                "location": 27,
                "name": [
                  {
                    "String": {
                      "sval": ">",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 10,
                    },
                    "location": 29,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`returning.sql > line 48 1`] = `
[
  "DELETE FROM foo
  USING int4_tbl i
  WHERE foo.f1 + 123455 = i.f1
  RETURNING foo.*, i.f1 as "i.f1"",
  {
    "stmts": [
      {
        "stmt": {
          "DeleteStmt": {
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "foo",
              "relpersistence": "p",
            },
            "returningList": [
              {
                "ResTarget": {
                  "location": 78,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "foo",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 78,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 85,
                  "name": "i.f1",
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "i",
                          },
                        },
                        {
                          "String": {
                            "sval": "f1",
                          },
                        },
                      ],
                      "location": 85,
                    },
                  },
                },
              },
            ],
            "usingClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "i",
                  },
                  "inh": true,
                  "location": 24,
                  "relname": "int4_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "foo",
                            },
                          },
                          {
                            "String": {
                              "sval": "f1",
                            },
                          },
                        ],
                        "location": 43,
                      },
                    },
                    "location": 50,
                    "name": [
                      {
                        "String": {
                          "sval": "+",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 123455,
                        },
                        "location": 52,
                      },
                    },
                  },
                },
                "location": 59,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "i",
                        },
                      },
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 61,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`returning.sql > line 59 1`] = `
[
  "INSERT INTO foochild VALUES(123,'child',999,-123)",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "foochild",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 123,
                            },
                            "location": 28,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 32,
                            "sval": {
                              "sval": "child",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 999,
                            },
                            "location": 40,
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {},
                            "location": 44,
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`returning.sql > line 61 1`] = `
[
  "ALTER TABLE foo ADD COLUMN f4 int8 DEFAULT 99",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "def": {
                    "ColumnDef": {
                      "colname": "f4",
                      "constraints": [
                        {
                          "Constraint": {
                            "contype": "CONSTR_DEFAULT",
                            "location": 35,
                            "raw_expr": {
                              "A_Const": {
                                "ival": {
                                  "ival": 99,
                                },
                                "location": 43,
                              },
                            },
                          },
                        },
                      ],
                      "is_local": true,
                      "location": 27,
                      "typeName": {
                        "location": 30,
                        "names": [
                          {
                            "String": {
                              "sval": "int8",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  },
                  "subtype": "AT_AddColumn",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "foo",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`returning.sql > line 66 1`] = `
[
  "UPDATE foo SET f4 = f4 + f3 WHERE f4 = 99 RETURNING *",
  {
    "stmts": [
      {
        "stmt": {
          "UpdateStmt": {
            "relation": {
              "inh": true,
              "location": 7,
              "relname": "foo",
              "relpersistence": "p",
            },
            "returningList": [
              {
                "ResTarget": {
                  "location": 52,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 52,
                    },
                  },
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 15,
                  "name": "f4",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "f4",
                              },
                            },
                          ],
                          "location": 20,
                        },
                      },
                      "location": 23,
                      "name": [
                        {
                          "String": {
                            "sval": "+",
                          },
                        },
                      ],
                      "rexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "f3",
                              },
                            },
                          ],
                          "location": 25,
                        },
                      },
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "f4",
                        },
                      },
                    ],
                    "location": 34,
                  },
                },
                "location": 37,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 99,
                    },
                    "location": 39,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`returning.sql > line 71 1`] = `
[
  "UPDATE foo SET f3 = f3*2
  FROM int8_tbl i
  WHERE foo.f1 = i.q2
  RETURNING *",
  {
    "stmts": [
      {
        "stmt": {
          "UpdateStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "i",
                  },
                  "inh": true,
                  "location": 32,
                  "relname": "int8_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "relation": {
              "inh": true,
              "location": 7,
              "relname": "foo",
              "relpersistence": "p",
            },
            "returningList": [
              {
                "ResTarget": {
                  "location": 77,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 77,
                    },
                  },
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 15,
                  "name": "f3",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "f3",
                              },
                            },
                          ],
                          "location": 20,
                        },
                      },
                      "location": 22,
                      "name": [
                        {
                          "String": {
                            "sval": "*",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 23,
                        },
                      },
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "foo",
                        },
                      },
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 51,
                  },
                },
                "location": 58,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "i",
                        },
                      },
                      {
                        "String": {
                          "sval": "q2",
                        },
                      },
                    ],
                    "location": 60,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`returning.sql > line 79 1`] = `
[
  "DELETE FROM foo
  USING int8_tbl i
  WHERE foo.f1 = i.q2
  RETURNING *",
  {
    "stmts": [
      {
        "stmt": {
          "DeleteStmt": {
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "foo",
              "relpersistence": "p",
            },
            "returningList": [
              {
                "ResTarget": {
                  "location": 69,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 69,
                    },
                  },
                },
              },
            ],
            "usingClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "i",
                  },
                  "inh": true,
                  "location": 24,
                  "relname": "int8_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "foo",
                        },
                      },
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 43,
                  },
                },
                "location": 50,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "i",
                        },
                      },
                      {
                        "String": {
                          "sval": "q2",
                        },
                      },
                    ],
                    "location": 52,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`returning.sql > line 87 1`] = `
[
  "DROP TABLE foochild",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "foochild",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`returning.sql > line 93 1`] = `
[
  "CREATE RULE voo_i AS ON INSERT TO voo DO INSTEAD
  INSERT INTO foo VALUES(new.*, 57)",
  {
    "stmts": [
      {
        "stmt": {
          "RuleStmt": {
            "actions": [
              {
                "InsertStmt": {
                  "override": "OVERRIDING_NOT_SET",
                  "relation": {
                    "inh": true,
                    "location": 63,
                    "relname": "foo",
                    "relpersistence": "p",
                  },
                  "selectStmt": {
                    "SelectStmt": {
                      "limitOption": "LIMIT_OPTION_DEFAULT",
                      "op": "SETOP_NONE",
                      "valuesLists": [
                        {
                          "List": {
                            "items": [
                              {
                                "ColumnRef": {
                                  "fields": [
                                    {
                                      "String": {
                                        "sval": "new",
                                      },
                                    },
                                    {
                                      "A_Star": {},
                                    },
                                  ],
                                  "location": 74,
                                },
                              },
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 57,
                                  },
                                  "location": 81,
                                },
                              },
                            ],
                          },
                        },
                      ],
                    },
                  },
                },
              },
            ],
            "event": "CMD_INSERT",
            "instead": true,
            "relation": {
              "inh": true,
              "location": 34,
              "relname": "voo",
              "relpersistence": "p",
            },
            "rulename": "voo_i",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`returning.sql > line 96 1`] = `
[
  "INSERT INTO voo VALUES(11,'zit')",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "voo",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 11,
                            },
                            "location": 23,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 26,
                            "sval": {
                              "sval": "zit",
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`returning.sql > line 98 1`] = `
[
  "INSERT INTO voo VALUES(12,'zoo') RETURNING *, f1*2",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "voo",
              "relpersistence": "p",
            },
            "returningList": [
              {
                "ResTarget": {
                  "location": 43,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 43,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 46,
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "f1",
                              },
                            },
                          ],
                          "location": 46,
                        },
                      },
                      "location": 48,
                      "name": [
                        {
                          "String": {
                            "sval": "*",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 49,
                        },
                      },
                    },
                  },
                },
              },
            ],
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 12,
                            },
                            "location": 23,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 26,
                            "sval": {
                              "sval": "zoo",
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`returning.sql > line 101 1`] = `
[
  "CREATE OR REPLACE RULE voo_i AS ON INSERT TO voo DO INSTEAD
  INSERT INTO foo VALUES(new.*, 57) RETURNING *",
  {
    "stmts": [
      {
        "stmt": {
          "RuleStmt": {
            "actions": [
              {
                "InsertStmt": {
                  "override": "OVERRIDING_NOT_SET",
                  "relation": {
                    "inh": true,
                    "location": 74,
                    "relname": "foo",
                    "relpersistence": "p",
                  },
                  "returningList": [
                    {
                      "ResTarget": {
                        "location": 106,
                        "val": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "A_Star": {},
                              },
                            ],
                            "location": 106,
                          },
                        },
                      },
                    },
                  ],
                  "selectStmt": {
                    "SelectStmt": {
                      "limitOption": "LIMIT_OPTION_DEFAULT",
                      "op": "SETOP_NONE",
                      "valuesLists": [
                        {
                          "List": {
                            "items": [
                              {
                                "ColumnRef": {
                                  "fields": [
                                    {
                                      "String": {
                                        "sval": "new",
                                      },
                                    },
                                    {
                                      "A_Star": {},
                                    },
                                  ],
                                  "location": 85,
                                },
                              },
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 57,
                                  },
                                  "location": 92,
                                },
                              },
                            ],
                          },
                        },
                      ],
                    },
                  },
                },
              },
            ],
            "event": "CMD_INSERT",
            "instead": true,
            "relation": {
              "inh": true,
              "location": 45,
              "relname": "voo",
              "relpersistence": "p",
            },
            "replace": true,
            "rulename": "voo_i",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`returning.sql > line 104 1`] = `
[
  "CREATE OR REPLACE RULE voo_i AS ON INSERT TO voo DO INSTEAD
  INSERT INTO foo VALUES(new.*, 57) RETURNING f1, f2",
  {
    "stmts": [
      {
        "stmt": {
          "RuleStmt": {
            "actions": [
              {
                "InsertStmt": {
                  "override": "OVERRIDING_NOT_SET",
                  "relation": {
                    "inh": true,
                    "location": 74,
                    "relname": "foo",
                    "relpersistence": "p",
                  },
                  "returningList": [
                    {
                      "ResTarget": {
                        "location": 106,
                        "val": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "f1",
                                },
                              },
                            ],
                            "location": 106,
                          },
                        },
                      },
                    },
                    {
                      "ResTarget": {
                        "location": 110,
                        "val": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "f2",
                                },
                              },
                            ],
                            "location": 110,
                          },
                        },
                      },
                    },
                  ],
                  "selectStmt": {
                    "SelectStmt": {
                      "limitOption": "LIMIT_OPTION_DEFAULT",
                      "op": "SETOP_NONE",
                      "valuesLists": [
                        {
                          "List": {
                            "items": [
                              {
                                "ColumnRef": {
                                  "fields": [
                                    {
                                      "String": {
                                        "sval": "new",
                                      },
                                    },
                                    {
                                      "A_Star": {},
                                    },
                                  ],
                                  "location": 85,
                                },
                              },
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 57,
                                  },
                                  "location": 92,
                                },
                              },
                            ],
                          },
                        },
                      ],
                    },
                  },
                },
              },
            ],
            "event": "CMD_INSERT",
            "instead": true,
            "relation": {
              "inh": true,
              "location": 45,
              "relname": "voo",
              "relpersistence": "p",
            },
            "replace": true,
            "rulename": "voo_i",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`returning.sql > line 110 1`] = `
[
  "INSERT INTO voo VALUES(14,'zoo2') RETURNING *",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "voo",
              "relpersistence": "p",
            },
            "returningList": [
              {
                "ResTarget": {
                  "location": 44,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 44,
                    },
                  },
                },
              },
            ],
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 14,
                            },
                            "location": 23,
                          },
                        },
                        {
                          "A_Const": {
                            "location": 26,
                            "sval": {
                              "sval": "zoo2",
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`returning.sql > line 115 1`] = `
[
  "CREATE OR REPLACE RULE voo_u AS ON UPDATE TO voo DO INSTEAD
  UPDATE foo SET f1 = new.f1, f2 = new.f2 WHERE f1 = old.f1
  RETURNING f1, f2",
  {
    "stmts": [
      {
        "stmt": {
          "RuleStmt": {
            "actions": [
              {
                "UpdateStmt": {
                  "relation": {
                    "inh": true,
                    "location": 69,
                    "relname": "foo",
                    "relpersistence": "p",
                  },
                  "returningList": [
                    {
                      "ResTarget": {
                        "location": 132,
                        "val": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "f1",
                                },
                              },
                            ],
                            "location": 132,
                          },
                        },
                      },
                    },
                    {
                      "ResTarget": {
                        "location": 136,
                        "val": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "f2",
                                },
                              },
                            ],
                            "location": 136,
                          },
                        },
                      },
                    },
                  ],
                  "targetList": [
                    {
                      "ResTarget": {
                        "location": 77,
                        "name": "f1",
                        "val": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "new",
                                },
                              },
                              {
                                "String": {
                                  "sval": "f1",
                                },
                              },
                            ],
                            "location": 82,
                          },
                        },
                      },
                    },
                    {
                      "ResTarget": {
                        "location": 90,
                        "name": "f2",
                        "val": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "new",
                                },
                              },
                              {
                                "String": {
                                  "sval": "f2",
                                },
                              },
                            ],
                            "location": 95,
                          },
                        },
                      },
                    },
                  ],
                  "whereClause": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "f1",
                              },
                            },
                          ],
                          "location": 108,
                        },
                      },
                      "location": 111,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "old",
                              },
                            },
                            {
                              "String": {
                                "sval": "f1",
                              },
                            },
                          ],
                          "location": 113,
                        },
                      },
                    },
                  },
                },
              },
            ],
            "event": "CMD_UPDATE",
            "instead": true,
            "relation": {
              "inh": true,
              "location": 45,
              "relname": "voo",
              "relpersistence": "p",
            },
            "replace": true,
            "rulename": "voo_u",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`returning.sql > line 119 1`] = `
[
  "update voo set f1 = f1 + 1 where f2 = 'zoo2'",
  {
    "stmts": [
      {
        "stmt": {
          "UpdateStmt": {
            "relation": {
              "inh": true,
              "location": 7,
              "relname": "voo",
              "relpersistence": "p",
            },
            "targetList": [
              {
                "ResTarget": {
                  "location": 15,
                  "name": "f1",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "f1",
                              },
                            },
                          ],
                          "location": 20,
                        },
                      },
                      "location": 23,
                      "name": [
                        {
                          "String": {
                            "sval": "+",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 25,
                        },
                      },
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "f2",
                        },
                      },
                    ],
                    "location": 33,
                  },
                },
                "location": 36,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 38,
                    "sval": {
                      "sval": "zoo2",
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`returning.sql > line 125 1`] = `
[
  "CREATE OR REPLACE RULE voo_d AS ON DELETE TO voo DO INSTEAD
  DELETE FROM foo WHERE f1 = old.f1
  RETURNING f1, f2",
  {
    "stmts": [
      {
        "stmt": {
          "RuleStmt": {
            "actions": [
              {
                "DeleteStmt": {
                  "relation": {
                    "inh": true,
                    "location": 74,
                    "relname": "foo",
                    "relpersistence": "p",
                  },
                  "returningList": [
                    {
                      "ResTarget": {
                        "location": 108,
                        "val": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "f1",
                                },
                              },
                            ],
                            "location": 108,
                          },
                        },
                      },
                    },
                    {
                      "ResTarget": {
                        "location": 112,
                        "val": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "f2",
                                },
                              },
                            ],
                            "location": 112,
                          },
                        },
                      },
                    },
                  ],
                  "whereClause": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "f1",
                              },
                            },
                          ],
                          "location": 84,
                        },
                      },
                      "location": 87,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "old",
                              },
                            },
                            {
                              "String": {
                                "sval": "f1",
                              },
                            },
                          ],
                          "location": 89,
                        },
                      },
                    },
                  },
                },
              },
            ],
            "event": "CMD_DELETE",
            "instead": true,
            "relation": {
              "inh": true,
              "location": 45,
              "relname": "voo",
              "relpersistence": "p",
            },
            "replace": true,
            "rulename": "voo_d",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`returning.sql > line 129 1`] = `
[
  "DELETE FROM foo WHERE f1 = 13",
  {
    "stmts": [
      {
        "stmt": {
          "DeleteStmt": {
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "foo",
              "relpersistence": "p",
            },
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 22,
                  },
                },
                "location": 25,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 13,
                    },
                    "location": 27,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`returning.sql > line 142 1`] = `
[
  "CREATE TEMP VIEW joinview AS
  SELECT foo.*, other FROM foo JOIN joinme ON (f2 = f2j)",
  {
    "stmts": [
      {
        "stmt": {
          "ViewStmt": {
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "JoinExpr": {
                      "jointype": "JOIN_INNER",
                      "larg": {
                        "RangeVar": {
                          "inh": true,
                          "location": 56,
                          "relname": "foo",
                          "relpersistence": "p",
                        },
                      },
                      "quals": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "f2",
                                  },
                                },
                              ],
                              "location": 76,
                            },
                          },
                          "location": 79,
                          "name": [
                            {
                              "String": {
                                "sval": "=",
                              },
                            },
                          ],
                          "rexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "f2j",
                                  },
                                },
                              ],
                              "location": 81,
                            },
                          },
                        },
                      },
                      "rarg": {
                        "RangeVar": {
                          "inh": true,
                          "location": 65,
                          "relname": "joinme",
                          "relpersistence": "p",
                        },
                      },
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 38,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "foo",
                              },
                            },
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 38,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 45,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "other",
                              },
                            },
                          ],
                          "location": 45,
                        },
                      },
                    },
                  },
                ],
              },
            },
            "view": {
              "inh": true,
              "location": 17,
              "relname": "joinview",
              "relpersistence": "t",
            },
            "withCheckOption": "NO_CHECK_OPTION",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`returning.sql > line 145 1`] = `
[
  "SELECT * FROM joinview",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "joinview",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`returning.sql > line 147 1`] = `
[
  "CREATE RULE joinview_u AS ON UPDATE TO joinview DO INSTEAD
  UPDATE foo SET f1 = new.f1, f3 = new.f3
    FROM joinme WHERE f2 = f2j AND f2 = old.f2
    RETURNING foo.*, other",
  {
    "stmts": [
      {
        "stmt": {
          "RuleStmt": {
            "actions": [
              {
                "UpdateStmt": {
                  "fromClause": [
                    {
                      "RangeVar": {
                        "inh": true,
                        "location": 110,
                        "relname": "joinme",
                        "relpersistence": "p",
                      },
                    },
                  ],
                  "relation": {
                    "inh": true,
                    "location": 68,
                    "relname": "foo",
                    "relpersistence": "p",
                  },
                  "returningList": [
                    {
                      "ResTarget": {
                        "location": 162,
                        "val": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "foo",
                                },
                              },
                              {
                                "A_Star": {},
                              },
                            ],
                            "location": 162,
                          },
                        },
                      },
                    },
                    {
                      "ResTarget": {
                        "location": 169,
                        "val": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "other",
                                },
                              },
                            ],
                            "location": 169,
                          },
                        },
                      },
                    },
                  ],
                  "targetList": [
                    {
                      "ResTarget": {
                        "location": 76,
                        "name": "f1",
                        "val": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "new",
                                },
                              },
                              {
                                "String": {
                                  "sval": "f1",
                                },
                              },
                            ],
                            "location": 81,
                          },
                        },
                      },
                    },
                    {
                      "ResTarget": {
                        "location": 89,
                        "name": "f3",
                        "val": {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "new",
                                },
                              },
                              {
                                "String": {
                                  "sval": "f3",
                                },
                              },
                            ],
                            "location": 94,
                          },
                        },
                      },
                    },
                  ],
                  "whereClause": {
                    "BoolExpr": {
                      "args": [
                        {
                          "A_Expr": {
                            "kind": "AEXPR_OP",
                            "lexpr": {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "f2",
                                    },
                                  },
                                ],
                                "location": 123,
                              },
                            },
                            "location": 126,
                            "name": [
                              {
                                "String": {
                                  "sval": "=",
                                },
                              },
                            ],
                            "rexpr": {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "f2j",
                                    },
                                  },
                                ],
                                "location": 128,
                              },
                            },
                          },
                        },
                        {
                          "A_Expr": {
                            "kind": "AEXPR_OP",
                            "lexpr": {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "f2",
                                    },
                                  },
                                ],
                                "location": 136,
                              },
                            },
                            "location": 139,
                            "name": [
                              {
                                "String": {
                                  "sval": "=",
                                },
                              },
                            ],
                            "rexpr": {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "old",
                                    },
                                  },
                                  {
                                    "String": {
                                      "sval": "f2",
                                    },
                                  },
                                ],
                                "location": 141,
                              },
                            },
                          },
                        },
                      ],
                      "boolop": "AND_EXPR",
                      "location": 132,
                    },
                  },
                },
              },
            ],
            "event": "CMD_UPDATE",
            "instead": true,
            "relation": {
              "inh": true,
              "location": 39,
              "relname": "joinview",
              "relpersistence": "p",
            },
            "rulename": "joinview_u",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`returning.sql > line 152 1`] = `
[
  "UPDATE joinview SET f1 = f1 + 1 WHERE f3 = 57 RETURNING *, other + 1",
  {
    "stmts": [
      {
        "stmt": {
          "UpdateStmt": {
            "relation": {
              "inh": true,
              "location": 7,
              "relname": "joinview",
              "relpersistence": "p",
            },
            "returningList": [
              {
                "ResTarget": {
                  "location": 56,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 56,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 59,
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "other",
                              },
                            },
                          ],
                          "location": 59,
                        },
                      },
                      "location": 65,
                      "name": [
                        {
                          "String": {
                            "sval": "+",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 67,
                        },
                      },
                    },
                  },
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 20,
                  "name": "f1",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "f1",
                              },
                            },
                          ],
                          "location": 25,
                        },
                      },
                      "location": 28,
                      "name": [
                        {
                          "String": {
                            "sval": "+",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 30,
                        },
                      },
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "f3",
                        },
                      },
                    ],
                    "location": 38,
                  },
                },
                "location": 41,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {
                      "ival": 57,
                    },
                    "location": 43,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`returning.sql > line 159 1`] = `
[
  "INSERT INTO foo AS bar DEFAULT VALUES RETURNING *",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "alias": {
                "aliasname": "bar",
              },
              "inh": true,
              "location": 12,
              "relname": "foo",
              "relpersistence": "p",
            },
            "returningList": [
              {
                "ResTarget": {
                  "location": 48,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 48,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`returning.sql > line 159 2`] = `
[
  " -- ok
INSERT INTO foo AS bar DEFAULT VALUES RETURNING foo.*",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "alias": {
                "aliasname": "bar",
              },
              "inh": true,
              "location": 19,
              "relname": "foo",
              "relpersistence": "p",
            },
            "returningList": [
              {
                "ResTarget": {
                  "location": 55,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "foo",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 55,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`returning.sql > line 160 1`] = `
[
  " -- fails, wrong name
INSERT INTO foo AS bar DEFAULT VALUES RETURNING bar.*",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "alias": {
                "aliasname": "bar",
              },
              "inh": true,
              "location": 34,
              "relname": "foo",
              "relpersistence": "p",
            },
            "returningList": [
              {
                "ResTarget": {
                  "location": 70,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "bar",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 70,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`returning.sql > line 161 1`] = `
[
  " -- ok
INSERT INTO foo AS bar DEFAULT VALUES RETURNING bar.f3",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "alias": {
                "aliasname": "bar",
              },
              "inh": true,
              "location": 19,
              "relname": "foo",
              "relpersistence": "p",
            },
            "returningList": [
              {
                "ResTarget": {
                  "location": 55,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "bar",
                          },
                        },
                        {
                          "String": {
                            "sval": "f3",
                          },
                        },
                      ],
                      "location": 55,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
